fixed some spacing

--- a/css/main.styl
+++ b/css/main.styl
@@ -50,7 +50,7 @@ body
 			font-size 21px
 			font-weight normal
 			text-align center
-			padding 22px 0
+			padding 22px 0 0
 		pre
 			font-size 14px
 			background #000
